--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ background-color: yellow;
 nav ul li {
     display: inline;
 }
+img {
+    width: 200px;
+    height: 200px;
+}
+
+footer { text-align: center; }
